js/vCardParser.js
vCardParser = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { vCards: peg$parsevCards },
        peg$startRuleFunction  = peg$parsevCards,

        peg$c0 = function(vcards) {
            return vcards;
          },
        peg$c1 = ".",
        peg$c2 = { type: "literal", value: ".", description: "\".\"" },
        peg$c3 = "begin",
        peg$c4 = { type: "literal", value: "BEGIN", description: "\"BEGIN\"" },
        peg$c5 = ":",
        peg$c6 = { type: "literal", value: ":", description: "\":\"" },
        peg$c7 = "vcard",
        peg$c8 = { type: "literal", value: "VCARD", description: "\"VCARD\"" },
        peg$c9 = "end",
        peg$c10 = { type: "literal", value: "END", description: "\"END\"" },
        peg$c11 = function(bgroup, lines, egroup) {
            var vcard = {};
            var name;
            var value;

            vcard.bgroup = bgroup ? bgroup[0] : '';
            vcard.egroup = egroup ? egroup[0] : '';

            if (!lines) {
              return vcard;
            }

            lines.forEach(function(line){
              if (!vcard[line.name]) {
                vcard[line.name] = line.value;
              } else if (Array.isArray(vcard[line.name])) {
                vcard[line.name].push(line.value);
              } else {
                vcard[line.name] = [vcard[line.name], line.value];
              }
            });

            return vcard;
          },
        peg$c12 = "-",
        peg$c13 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c14 = function() {
            return text();
          },
        peg$c15 = ";",
        peg$c16 = { type: "literal", value: ";", description: "\";\"" },
        peg$c17 = function(g, name, params, value) {
            var ps = [];
            if (params) {
              ps = params.map(function(p){return p[1];});
            }
            return {
              'name': name.toLowerCase(),
              'value': {
                'group': g ? g[0] : '',
                'params': ps,
                'value': value || ''
              }
            };
          },
        peg$c18 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c19 = function() {
            return {
              'name': '',
              'value': text()
            };
          },
        peg$c20 = "=",
        peg$c21 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c22 = ",",
        peg$c23 = { type: "literal", value: ",", description: "\",\"" },
        peg$c24 = function(pname, pvalue) {
            var name = pname;
            var value = [];
            if (pvalue) {
              value.push(pvalue[1][0]);
              if (pvalue[1][1]) {
                value = value.concat(pvalue[1][1].map(function(v){return v[1];}));
              }
            } else {
              name = '';
              value = pname;
            }

            return {
              'name': name,
              'value': value
            };
          },
        peg$c25 = "x-",
        peg$c26 = { type: "literal", value: "x-", description: "\"x-\"" },
        peg$c27 = "dom",
        peg$c28 = { type: "literal", value: "DOM", description: "\"DOM\"" },
        peg$c29 = "intl",
        peg$c30 = { type: "literal", value: "INTL", description: "\"INTL\"" },
        peg$c31 = "postal",
        peg$c32 = { type: "literal", value: "POSTAL", description: "\"POSTAL\"" },
        peg$c33 = "parcel",
        peg$c34 = { type: "literal", value: "PARCEL", description: "\"PARCEL\"" },
        peg$c35 = "home",
        peg$c36 = { type: "literal", value: "HOME", description: "\"HOME\"" },
        peg$c37 = "work",
        peg$c38 = { type: "literal", value: "WORK", description: "\"WORK\"" },
        peg$c39 = "pref",
        peg$c40 = { type: "literal", value: "PREF", description: "\"PREF\"" },
        peg$c41 = "voice",
        peg$c42 = { type: "literal", value: "VOICE", description: "\"VOICE\"" },
        peg$c43 = "fax",
        peg$c44 = { type: "literal", value: "FAX", description: "\"FAX\"" },
        peg$c45 = "msg",
        peg$c46 = { type: "literal", value: "MSG", description: "\"MSG\"" },
        peg$c47 = "cell",
        peg$c48 = { type: "literal", value: "CELL", description: "\"CELL\"" },
        peg$c49 = "pager",
        peg$c50 = { type: "literal", value: "PAGER", description: "\"PAGER\"" },
        peg$c51 = "bbs",
        peg$c52 = { type: "literal", value: "BBS", description: "\"BBS\"" },
        peg$c53 = "modem",
        peg$c54 = { type: "literal", value: "MODEM", description: "\"MODEM\"" },
        peg$c55 = "car",
        peg$c56 = { type: "literal", value: "CAR", description: "\"CAR\"" },
        peg$c57 = "isdn",
        peg$c58 = { type: "literal", value: "ISDN", description: "\"ISDN\"" },
        peg$c59 = "video",
        peg$c60 = { type: "literal", value: "VIDEO", description: "\"VIDEO\"" },
        peg$c61 = "aol",
        peg$c62 = { type: "literal", value: "AOL", description: "\"AOL\"" },
        peg$c63 = "applelink",
        peg$c64 = { type: "literal", value: "APPLELINK", description: "\"APPLELINK\"" },
        peg$c65 = "attmail",
        peg$c66 = { type: "literal", value: "ATTMAIL", description: "\"ATTMAIL\"" },
        peg$c67 = "cis",
        peg$c68 = { type: "literal", value: "CIS", description: "\"CIS\"" },
        peg$c69 = "eworld",
        peg$c70 = { type: "literal", value: "EWORLD", description: "\"EWORLD\"" },
        peg$c71 = "internet",
        peg$c72 = { type: "literal", value: "INTERNET", description: "\"INTERNET\"" },
        peg$c73 = "ibmmail",
        peg$c74 = { type: "literal", value: "IBMMAIL", description: "\"IBMMAIL\"" },
        peg$c75 = "mcimail",
        peg$c76 = { type: "literal", value: "MCIMAIL", description: "\"MCIMAIL\"" },
        peg$c77 = "powershare",
        peg$c78 = { type: "literal", value: "POWERSHARE", description: "\"POWERSHARE\"" },
        peg$c79 = "prodigy",
        peg$c80 = { type: "literal", value: "PRODIGY", description: "\"PRODIGY\"" },
        peg$c81 = "tlx",
        peg$c82 = { type: "literal", value: "TLX", description: "\"TLX\"" },
        peg$c83 = "x400",
        peg$c84 = { type: "literal", value: "X400", description: "\"X400\"" },
        peg$c85 = "gif",
        peg$c86 = { type: "literal", value: "GIF", description: "\"GIF\"" },
        peg$c87 = "cgm",
        peg$c88 = { type: "literal", value: "CGM", description: "\"CGM\"" },
        peg$c89 = "wmf",
        peg$c90 = { type: "literal", value: "WMF", description: "\"WMF\"" },
        peg$c91 = "bmp",
        peg$c92 = { type: "literal", value: "BMP", description: "\"BMP\"" },
        peg$c93 = "met",
        peg$c94 = { type: "literal", value: "MET", description: "\"MET\"" },
        peg$c95 = "pmb",
        peg$c96 = { type: "literal", value: "PMB", description: "\"PMB\"" },
        peg$c97 = "dib",
        peg$c98 = { type: "literal", value: "DIB", description: "\"DIB\"" },
        peg$c99 = "pict",
        peg$c100 = { type: "literal", value: "PICT", description: "\"PICT\"" },
        peg$c101 = "tiff",
        peg$c102 = { type: "literal", value: "TIFF", description: "\"TIFF\"" },
        peg$c103 = "pdf",
        peg$c104 = { type: "literal", value: "PDF", description: "\"PDF\"" },
        peg$c105 = "ps",
        peg$c106 = { type: "literal", value: "PS", description: "\"PS\"" },
        peg$c107 = "jpeg",
        peg$c108 = { type: "literal", value: "JPEG", description: "\"JPEG\"" },
        peg$c109 = "qtime",
        peg$c110 = { type: "literal", value: "QTIME", description: "\"QTIME\"" },
        peg$c111 = "mpeg",
        peg$c112 = { type: "literal", value: "MPEG", description: "\"MPEG\"" },
        peg$c113 = "mpeg2",
        peg$c114 = { type: "literal", value: "MPEG2", description: "\"MPEG2\"" },
        peg$c115 = "avi",
        peg$c116 = { type: "literal", value: "AVI", description: "\"AVI\"" },
        peg$c117 = "wave",
        peg$c118 = { type: "literal", value: "WAVE", description: "\"WAVE\"" },
        peg$c119 = "aiff",
        peg$c120 = { type: "literal", value: "AIFF", description: "\"AIFF\"" },
        peg$c121 = "pcm",
        peg$c122 = { type: "literal", value: "PCM", description: "\"PCM\"" },
        peg$c123 = "x509",
        peg$c124 = { type: "literal", value: "X509", description: "\"X509\"" },
        peg$c125 = "pgp",
        peg$c126 = { type: "literal", value: "PGP", description: "\"PGP\"" },
        peg$c127 = "adr",
        peg$c128 = { type: "literal", value: "adr", description: "\"adr\"" },
        peg$c129 = "agent",
        peg$c130 = { type: "literal", value: "agent", description: "\"agent\"" },
        peg$c131 = "bday",
        peg$c132 = { type: "literal", value: "bday", description: "\"bday\"" },
        peg$c133 = "categories",
        peg$c134 = { type: "literal", value: "categories", description: "\"categories\"" },
        peg$c135 = "class",
        peg$c136 = { type: "literal", value: "class", description: "\"class\"" },
        peg$c137 = "email",
        peg$c138 = { type: "literal", value: "email", description: "\"email\"" },
        peg$c139 = "fn",
        peg$c140 = { type: "literal", value: "fn", description: "\"fn\"" },
        peg$c141 = "geo",
        peg$c142 = { type: "literal", value: "geo", description: "\"geo\"" },
        peg$c143 = "impp",
        peg$c144 = { type: "literal", value: "impp", description: "\"impp\"" },
        peg$c145 = "key",
        peg$c146 = { type: "literal", value: "key", description: "\"key\"" },
        peg$c147 = "label",
        peg$c148 = { type: "literal", value: "label", description: "\"label\"" },
        peg$c149 = "logo",
        peg$c150 = { type: "literal", value: "logo", description: "\"logo\"" },
        peg$c151 = "mailer",
        peg$c152 = { type: "literal", value: "mailer", description: "\"mailer\"" },
        peg$c153 = "nickname",
        peg$c154 = { type: "literal", value: "nickname", description: "\"nickname\"" },
        peg$c155 = "name",
        peg$c156 = { type: "literal", value: "name", description: "\"name\"" },
        peg$c157 = "note",
        peg$c158 = { type: "literal", value: "note", description: "\"note\"" },
        peg$c159 = "n",
        peg$c160 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c161 = "org",
        peg$c162 = { type: "literal", value: "org", description: "\"org\"" },
        peg$c163 = "photo",
        peg$c164 = { type: "literal", value: "photo", description: "\"photo\"" },
        peg$c165 = "prodid",
        peg$c166 = { type: "literal", value: "prodid", description: "\"prodid\"" },
        peg$c167 = "profile",
        peg$c168 = { type: "literal", value: "profile", description: "\"profile\"" },
        peg$c169 = "rev",
        peg$c170 = { type: "literal", value: "rev", description: "\"rev\"" },
        peg$c171 = "role",
        peg$c172 = { type: "literal", value: "role", description: "\"role\"" },
        peg$c173 = "sort-string",
        peg$c174 = { type: "literal", value: "sort-string", description: "\"sort-string\"" },
        peg$c175 = "sound",
        peg$c176 = { type: "literal", value: "sound", description: "\"sound\"" },
        peg$c177 = "source",
        peg$c178 = { type: "literal", value: "source", description: "\"source\"" },
        peg$c179 = "tel",
        peg$c180 = { type: "literal", value: "tel", description: "\"tel\"" },
        peg$c181 = "title",
        peg$c182 = { type: "literal", value: "title", description: "\"title\"" },
        peg$c183 = "tz",
        peg$c184 = { type: "literal", value: "tz", description: "\"tz\"" },
        peg$c185 = "uid",
        peg$c186 = { type: "literal", value: "uid", description: "\"uid\"" },
        peg$c187 = "url",
        peg$c188 = { type: "literal", value: "url", description: "\"url\"" },
        peg$c189 = "version",
        peg$c190 = { type: "literal", value: "version", description: "\"version\"" },
        peg$c191 = "\r",
        peg$c192 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c193 = "\n",
        peg$c194 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c195 = /^[0-9]/,
        peg$c196 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c197 = /^[A-Z]/,
        peg$c198 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c199 = /^[a-z]/,
        peg$c200 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c201 = /^[^\n\r]/,
        peg$c202 = { type: "class", value: "[^\\n\\r]", description: "[^\\n\\r]" },
        peg$c203 = /^[^:;\n\r]/,
        peg$c204 = { type: "class", value: "[^:;\\n\\r]", description: "[^:;\\n\\r]" },
        peg$c205 = /^[^:;=\n\r]/,
        peg$c206 = { type: "class", value: "[^:;=\\n\\r]", description: "[^:;=\\n\\r]" },
        peg$c207 = /^[^:;,\n\r]/,
        peg$c208 = { type: "class", value: "[^:;,\\n\\r]", description: "[^:;,\\n\\r]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsevCards() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsevCard();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsevCard();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsevCard() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseGroup();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 46) {
          s3 = peg$c1;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c2); }
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 5).toLowerCase() === peg$c3) {
          s2 = input.substr(peg$currPos, 5);
          peg$currPos += 5;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s3 = peg$c5;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 5).toLowerCase() === peg$c7) {
              s4 = input.substr(peg$currPos, 5);
              peg$currPos += 5;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parseCRLF();
              if (s6 !== peg$FAILED) {
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parseCRLF();
                }
              } else {
                s5 = peg$FAILED;
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parseContentLine();
                if (s7 !== peg$FAILED) {
                  while (s7 !== peg$FAILED) {
                    s6.push(s7);
                    s7 = peg$parseContentLine();
                  }
                } else {
                  s6 = peg$FAILED;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$currPos;
                  s8 = peg$parseGroup();
                  if (s8 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 46) {
                      s9 = peg$c1;
                      peg$currPos++;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c2); }
                    }
                    if (s9 !== peg$FAILED) {
                      s8 = [s8, s9];
                      s7 = s8;
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c9) {
                      s8 = input.substr(peg$currPos, 3);
                      peg$currPos += 3;
                    } else {
                      s8 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c10); }
                    }
                    if (s8 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 58) {
                        s9 = peg$c5;
                        peg$currPos++;
                      } else {
                        s9 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c6); }
                      }
                      if (s9 !== peg$FAILED) {
                        if (input.substr(peg$currPos, 5).toLowerCase() === peg$c7) {
                          s10 = input.substr(peg$currPos, 5);
                          peg$currPos += 5;
                        } else {
                          s10 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c8); }
                        }
                        if (s10 !== peg$FAILED) {
                          s11 = [];
                          s12 = peg$parseCRLF();
                          while (s12 !== peg$FAILED) {
                            s11.push(s12);
                            s12 = peg$parseCRLF();
                          }
                          if (s11 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c11(s1, s6, s7);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseGroup() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseAlpha();
      if (s2 === peg$FAILED) {
        s2 = peg$parseDigit();
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 45) {
            s2 = peg$c12;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
        }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseAlpha();
          if (s2 === peg$FAILED) {
            s2 = peg$parseDigit();
            if (s2 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 45) {
                s2 = peg$c12;
                peg$currPos++;
              } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c13); }
              }
            }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c14();
      }
      s0 = s1;

      return s0;
    }

    function peg$parseContentLine() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseGroup();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 46) {
          s3 = peg$c1;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c2); }
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseName();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 59) {
            s5 = peg$c15;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parseParam();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 59) {
              s5 = peg$c15;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c16); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseParam();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 58) {
              s4 = peg$c5;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseValue();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parseCRLF();
                if (s7 !== peg$FAILED) {
                  while (s7 !== peg$FAILED) {
                    s6.push(s7);
                    s7 = peg$parseCRLF();
                  }
                } else {
                  s6 = peg$FAILED;
                }
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c17(s1, s2, s3, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseName() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$currPos;
      peg$silentFails++;
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c9) {
